[Re #34] Added Seizure Phone Log and Incident form links to the Admin area

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
@@ -1,13 +1,14 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
     <h1>Private Forms</h1>
-
     <p style="text-align:center">
         Click a participant's name under a heading below to fill out the desired
          form.
     </p>
 
-    <h2 style="text-align:left">Observation Evaluation</h2>
+    <h2>Evaluation &amp; Planning Forms</h2>
+
+    <h3 style="text-align:left">Observation Evaluation</h3>
     <ul>
         {% for participant in participants %}
             <li>
@@ -18,7 +19,7 @@
         {% endfor %}
     </ul>
 
-    <h2 style="text-align:left">Individual Session Plan</h2>
+    <h3 style="text-align:left">Individual Session Plan</h3>
     <ul>
         {% for participant in participants %}
             <li>
@@ -29,11 +30,35 @@
         {% endfor %}
     </ul>
 
-    <h2 style="text-align:left">Rider Evaluation Checklist</h2>
+    <h3 style="text-align:left">Rider Evaluation Checklist</h3>
     <ul>
         {% for participant in participants %}
             <li>
                 <a href="{% url 'private_form_rider_eval_checklist' participant.participant_id %}">
+                    {{ participant.name }} ({{ participant.birth_date }})
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <h2>Incident Forms</h2>
+
+    <h3 style="text-align:left">Log Seizure Phone Call</h3>
+    <ul>
+        {% for participant in participants %}
+            <li>
+                <a href="{% url 'private-form-phone-log' participant.participant_id %}">
+                    {{ participant.name }} ({{ participant.birth_date }})
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <h3 style="text-align:left">Log Seizure Incident</h3>
+    <ul>
+        {% for participant in participants %}
+            <li>
+                <a href="{% url 'private-form-incidents' participant.participant_id %}">
                     {{ participant.name }} ({{ participant.birth_date }})
                 </a>
             </li>
