--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -3,7 +3,11 @@
     <h1>Administration</h1>
     <h2>Forms</h2>
     <ul>
-        <li><a href="{% url 'index-private-forms' %}">Evaluation &amp; Planning Forms</a></li>
+        <li>
+            <a href="{% url 'index-private-forms' %}">
+                Evaluation, Planning, &amp; Incident Forms
+            </a>
+        </li>
         <li>
             <a href="{% url 'report-select-participant' %}">
                 Participant Records
