[Re #81] Added Handpost/Twopoint/Circle section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -142,6 +142,87 @@
         <h2>Handpost/Twopoint/Circle</h2>
 
         <p>
+            <strong><u>Hand Post - English:</u></strong>
+            {{ rider_eval_checklist.hand_pos_english }}
+        </p>
+        <p>
+            <strong>Comments:</p>
+                {{ rider_eval_checklist.hand_pos_english_com }}
+        </p>
+        <p>
+            <strong><u>Hand Post - Western:</u></strong>
+            {{ rider_eval_checklist.hand_post_western }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.hand_post_western_com }}
+        </p>
+        <p>
+            <strong><u>Two Point - Trot:</u></strong>
+            {{ rider_eval_checklist.two_point_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.two_point_trot_com }}
+        </p>
+        <p>
+            <strong><u>Two Point - Canter:</u></strong>
+            {{ rider_eval_checklist.two_point_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.two_point_canter_com }}
+        </p>
+        <p>
+            <strong><u>Circle Trot - No Stirrups</u></strong>
+            {{ rider_eval_checklist.circle_trot_no_stirrups }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.circle_trot_no_stirrups_com }}
+        </p>
+        <p>
+            <strong><u>Circle - At Canter:</u></strong>
+            {{ rider_eval_checklist.circle_at_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.circle_at_canter_com }}
+        </p>
+        <p>
+            <strong><u>Circle Canter - No Stirrups:</u></strong>
+            {{ rider_eval_checklist.circle_canter_no_stirrups }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.circle_canter_no_stirrups_com }}
+        </p>
+        <p>
+            <strong><u>Circle - At Walk</u></strong>
+            {{ rider_eval_checklist.circle_at_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.circle_at_walk_com }}
+        </p>
+        <p>
+            <strong><u>Circle - At Trot:</u></strong>
+            {{ rider_eval_checklist.circle_at_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.circle_at_trot_com }}
+        </p>
+
+        <hr />
+
+        <h2>Holds</h2>
+
+        <p>
+            <strong><u>Handhold - Walk</u></strong>
+            {{ rider_eval_checklist.holds_handhold_walk }}
+        </p>
+        <p>
 
         </p>
     {% endif %}
