--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_observation_evaluation.html
@@ -18,7 +18,7 @@
         <hr />
 
         <p>
-            <strong>Walking Through Barn:</strong>
+            <strong><u>Walking Through Barn:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.walking_through_barn_willing }}
@@ -30,7 +30,7 @@
             {{ observation_evaluation.walking_through_barn_appearance }}
         </p>
         <p>
-            <strong>Looking at Horses:</strong>
+            <strong><u>Looking at Horses:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.looking_at_horses_willing }}
@@ -42,7 +42,7 @@
             {{ observation_evaluation.looking_at_horses_appearance }}
         </p>
         <p>
-            <strong>Petting the Horses:</strong>
+            <strong><u>Petting the Horses:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.petting_horses_willing }}
@@ -54,7 +54,7 @@
             {{ observation_evaluation.petting_horses_appearance }}
         </p>
         <p>
-            <strong>Up and Down Ramp:</strong>
+            <strong><u>Up and Down Ramp:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.up_down_ramp_willing }}
@@ -66,7 +66,7 @@
             {{ observation_evaluation.up_down_ramp_appearance }}
         </p>
         <p>
-            <strong>Mounting Before:</strong>
+            <strong><u>Mounting Before:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.mounting_before_willing }}
@@ -78,7 +78,7 @@
             {{ observation_evaluation.mounting_after_appearance }}
         </p>
         <p>
-            <strong>Mounting After:</strong>
+            <strong><u>Mounting After:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.mounting_after_willing }}
@@ -90,7 +90,7 @@
             {{ observation_evaluation.mounting_after_appearance }}
         </p>
         <p>
-            <strong>Riding Before:</strong>
+            <strong><u>Riding Before:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.riding_before_willing }}
@@ -102,7 +102,7 @@
             {{ observation_evaluation.riding_before_appearance }}
         </p>
         <p>
-            <strong>Riding During:</strong>
+            <strong><u>Riding During:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.riding_during_willing }}
@@ -114,7 +114,7 @@
             {{ observation_evaluation.riding_during_appearance }}
         </p>
         <p>
-            <strong>Riding After:</strong>
+            <strong><u>Riding After:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.riding_after_willing }}
@@ -126,7 +126,7 @@
             {{ observation_evaluation.riding_after_appearance }}
         </p>
         <p>
-            <strong>Understands Directions:</strong>
+            <strong><u>Understands Directions:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.understands_directions_willing }}
@@ -138,7 +138,7 @@
             {{ observation_evaluation.understands_directions_appearance }}
         </p>
         <p>
-            <strong>Participates in Exercises</strong>
+            <strong><u>Participates in Exercises:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.participates_exercises_willing }}
@@ -150,7 +150,7 @@
             {{ observation_evaluation.participates_exercises_appearance }}
         </p>
         <p>
-            <strong>Participates in Games:</strong>
+            <strong><u>Participates in Games:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.participates_games_willing }}
@@ -162,7 +162,7 @@
             {{ observation_evaluation.participates_games_appearance }}
         </p>
         <p>
-            <strong>General Attitude</strong>
+            <strong><u>General Attitude:</u></strong>
             <br />
             Willingness:
             {{ observation_evaluation.general_attitude_willing }}
