[Re #81] Added missing </strong> tag.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_session_plan.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_session_plan.html
@@ -38,7 +38,7 @@
         <p>
             <strong>Mobility:</strong>
             {{ session_plan.ambulatory_status }}
-            <strong>Mobility (other): {{ session_plan.ambulatory_status_other }}
+            <strong>Mobility (other):</strong> {{ session_plan.ambulatory_status_other }}
         </p>
 
         <hr />
