[Re #81] Added 'Holds' section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -146,8 +146,8 @@
             {{ rider_eval_checklist.hand_pos_english }}
         </p>
         <p>
-            <strong>Comments:</p>
-                {{ rider_eval_checklist.hand_pos_english_com }}
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.hand_pos_english_com }}
         </p>
         <p>
             <strong><u>Hand Post - Western:</u></strong>
@@ -174,7 +174,7 @@
             {{ rider_eval_checklist.two_point_canter_com }}
         </p>
         <p>
-            <strong><u>Circle Trot - No Stirrups</u></strong>
+            <strong><u>Circle Trot - No Stirrups:</u></strong>
             {{ rider_eval_checklist.circle_trot_no_stirrups }}
         </p>
         <p>
@@ -198,7 +198,7 @@
             {{ rider_eval_checklist.circle_canter_no_stirrups_com }}
         </p>
         <p>
-            <strong><u>Circle - At Walk</u></strong>
+            <strong><u>Circle - At Walk:</u></strong>
             {{ rider_eval_checklist.circle_at_walk }}
         </p>
         <p>
@@ -219,11 +219,68 @@
         <h2>Holds</h2>
 
         <p>
-            <strong><u>Handhold - Walk</u></strong>
+            <strong><u>Handhold - Walk:</u></strong>
             {{ rider_eval_checklist.holds_handhold_walk }}
         </p>
         <p>
-
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_handhold_walk_com }}
+        </p>
+        <p>
+            <strong><u>Handhold - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.holds_handhold_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_handhold_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Handhold - Post Trot:</u></strong>
+            {{ rider_eval_checklist.holds_handhold_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_handhold_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Handhold - Canter:</u></strong>
+            {{ rider_eval_checklist.holds_handhold_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_handhold_canter_com }}
+        </p>
+        <p>
+            <strong><u>Hold Reins - Walk:</u></strong>
+            {{ rider_eval_checklist.holds_reins_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_reins_walk_com }}
+        </p>
+        <p>
+            <strong><u>Hold Reins - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.holds_reins_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_reins_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Holds Reins - Post Trot:</u></strong>
+            {{ rider_eval_checklist.holds_reins_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_reins_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Holds Reins - Canter:</u></strong>
+            {{ rider_eval_checklist.holds_reins_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.holds_reins_canter_com }}
         </p>
     {% endif %}
 {% endblock %}
