[Re #81] Added Shorten/Lengthen/Control/Halt section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -282,5 +282,106 @@
             <strong>Comments:</strong>
             {{ rider_eval_checklist.holds_reins_canter_com }}
         </p>
+
+        <hr />
+
+        <h2>Shorten/Lengthen/Control/Halt</h2>
+
+        <p>
+            <strong><u>Shorten/Lengthen Reins - Walk:</u></strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_walk_com }}
+        </p>
+        <p>
+            <strong><u>Shorten/Lengthen Reins - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Shorten/Lengthen Reins - Post Trot:</u></strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Shorten/Lengthen Reins - Canter:</u></strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.shorten_lengthen_reins_canter_com }}
+        </p>
+        <p>
+            <strong><u>Can Control Horse - Walk:</u></strong>
+            {{ rider_eval_checklist.can_control_horse_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_control_horse_walk_com }}
+        </p>
+        <p>
+            <strong><u>Can Control Horse - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.can_control_horse_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_control_horse_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Control Horse - Post Trot:</u></strong>
+            {{ rider_eval_checklist.can_control_horse_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_control_horse_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Control Horse - Canter:</u></strong>
+            {{ rider_eval_checklist.can_control_horse_canter_com }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_control_horse_canter_com }}
+        </p>
+        <p>
+            <strong><u>Can Halt - Walk:</u></strong>
+            {{ rider_eval_checklist.can_halt_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_halt_walk_com }}
+        </p>
+        <p>
+            <strong><u>Can Halt - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.can_halt_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_halt_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Halt - Post Trot:</u></strong>
+            {{ rider_eval_checklist.can_halt_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_halt_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Halt - Canter:</u></strong>
+            {{ rider_eval_checklist.can_halt_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_halt_canter_com }}
+        </p>
     {% endif %}
 {% endblock %}
