[Re #81] Added Stirrups/Half-Seat section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -383,5 +383,106 @@
             <strong>Comments:</strong>
             {{ rider_eval_checklist.can_halt_canter_com }}
         </p>
+
+        <hr />
+
+        <h2>Stirrups/Half-Seat</h2>
+
+        <p>
+            <strong><u>Drop/Pickup Stirrups - Walk:</u></strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_walk_com }}
+        </p>
+        <p>
+            <strong><u>Drop/Pickup Stirrups - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Drop/Pickup Stirrups - Post Trot:</u></strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Drop/Pickup Stirrups - Canter:</u></strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.drop_pickup_stirrups_canter_com }}
+        </p>
+        <p>
+            <strong><u>Rides No Stirrups - Walk:</u></strong>
+            {{ rider_eval_checklist.rides_no_stirrups_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.rides_no_stirrups_walk_com }}
+        </p>
+        <p>
+            <strong><u>Rides No Stirrups - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.rides_no_stirrups_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.rides_no_stirrups_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Rides No Stirrups - Post Trot</u></strong>
+            {{ rider_eval_checklist.rides_no_stirrups_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.rides_no_stirrups_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Rides No Stirrups - Canter:</u></strong>
+            {{ rider_eval_checklist.rides_no_stirrups_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.rides_no_stirrups_canter_com }}
+        </p>
+        <p>
+            <strong><u>Maintain Half Seat - Walk:</u></strong>
+            {{ rider_eval_checklist.maintain_half_seat_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.maintain_half_seat_walk_com }}
+        </p>
+        <p>
+            <strong><u>Maintain Half Seat - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.maintain_half_seat_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.maintain_half_seat_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Maintain Half Seat - Post Trot:</u></strong>
+            {{ rider_eval_checklist.maintain_half_seat_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.maintain_half_seat_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Maintain Half Seat - Canter:</u></strong>
+            {{ rider_eval_checklist.maintain_half_seat_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.maintain_half_seat_canter_com }}
+        </p>
     {% endif %}
 {% endblock %}
