[Re #96] REVERT: commit 4794eac8eda4040ef92db14316dd277a8acd66d8, and REVERT commit 0792315b87eee0f2e075140dda0e03de4c392626

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -23,7 +23,7 @@
         {% csrf_token %}
 
         <p>
-            <strong>Participant:</strong> {{ participant.name }} ({{ participant.birth_date }})
+            <strong>Participant:</strong> {{ participant }}
         </p>
         <p>
             <strong>Date:</strong> {{ form.date }}
