[Re #96] Split participant info displayed on 'observation_evaluation.html' into Participant Name and Birth Date

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/observation_evaluation.html
@@ -23,7 +23,10 @@
         {% csrf_token %}
 
         <p>
-            <strong>Participant:</strong> {{ participant }}
+            <strong>Participant Name:</strong> {{ participant.name }}
+        </p>
+        <p>
+            <strong>Birth Date:</strong> {{ participant.birth_date }}
         </p>
         <p>
             <strong>Date:</strong> {{ form.date }}
