[Re #81] Added Post/Proper section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -484,5 +484,90 @@
             <strong>Comments:</strong>
             {{ rider_eval_checklist.maintain_half_seat_canter_com }}
         </p>
+
+        <hr />
+
+        <h2>Post/Proper</h2>
+
+        <p>
+            <strong><u>Can Post - Walk:</u></strong>
+            {{ rider_eval_checklist.can_post_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_post_walk_com }}
+        </p>
+        <p>
+            <strong><u>Can Post - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.can_post_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_post_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Post - Post Trot:</u></strong>
+            {{ rider_eval_checklist.can_post_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_post_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Post - Canter:</u></strong>
+            {{ rider_eval_checklist.can_post_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_post_canter_com }}
+        </p>
+        <p>
+            <strong><u>Proper Diagonal - Walk:</u></strong>
+            {{ rider_eval_checklist.proper_diagonal_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_diagonal_walk_com }}
+        </p>
+        <p>
+            <strong><u>Proper Diagonal - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.proper_diagonal_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_diagonal_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Proper Diagonal - Post Trot:</u></strong>
+            {{ rider_eval_checklist.proper_diagonal_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_diagonal_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Proper Diagonal - Canter:</u></strong>
+            {{ rider_eval_checklist.proper_diagonal_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_diagonal_canter_com }}
+        </p>
+        <p>
+            <strong><u>Proper Lead Canter - Sees:</u></strong>
+            {{ rider_eval_checklist.proper_lead_canter_sees }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_lead_canter_sees_com }}
+        </p>
+        <p>
+            <strong><u>Proper Lead Canter - Knows:</u></strong>
+            {{ rider_eval_checklist.proper_lead_canter_knows }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.proper_lead_canter_knows_com }}
+        </p>
     {% endif %}
 {% endblock %}
