[Re #81] Added Cavaletti/Crossbar section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -569,5 +569,74 @@
             <strong>Comments:</strong>
             {{ rider_eval_checklist.proper_lead_canter_knows_com }}
         </p>
+
+        <hr />
+
+        <h2>Cavaletti/Crossbar</h2>
+
+        <p>
+            <strong><u>Can Steer Over Cavaletti - Walk:</u></strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_walk_com }}
+        </p>
+        <p>
+            <strong><u>Can Steer Over Cavalletti - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Steer Over Cavalletti - Post Trot:</u></strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Can Steer Over Cavalletti - Canter:</u></strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.can_steer_over_cavalletti_canter_com }}
+        </p>
+        <p>
+            <strong><u>Jump Crossbar - Walk:</u></strong>
+            {{ rider_eval_checklist.jump_crossbar_walk }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.jump_crossbar_walk_com }}
+        </p>
+        <p>
+            <strong><u>Jump Crossbar - Sit Trot:</u></strong>
+            {{ rider_eval_checklist.jump_crossbar_sit_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.jump_crossbar_sit_trot_com }}
+        </p>
+        <p>
+            <strong><u>Jump Crossbar - Post Trot:</u></strong>
+            {{ rider_eval_checklist.jump_crossbar_post_trot }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.jump_crossbar_post_trot_com }}
+        </p>
+        <p>
+            <strong><u>Jump Crossbar - Canter:</u></strong>
+            {{ rider_eval_checklist.jump_crossbar_canter }}
+        </p>
+        <p>
+            <strong>Comments:</strong>
+            {{ rider_eval_checklist.jump_crossbar_canter_com }}
+        </p>
     {% endif %}
 {% endblock %}
