[Re #81] Added Overall Comments section to report_rider_eval_checklist.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_rider_eval_checklist.html
@@ -638,5 +638,12 @@
             <strong>Comments:</strong>
             {{ rider_eval_checklist.jump_crossbar_canter_com }}
         </p>
+
+        <hr />
+
+        <p>
+            <strong><u>Overall Comments:</u></strong>
+            {{ rider_eval_checklist.comments }}
+        </p>
     {% endif %}
 {% endblock %}
