--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -1,4 +1,3 @@
-
 {% extends "cbar_db/template.html" %}
 {% block header %}
     {% load staticfiles %}
@@ -51,6 +50,10 @@
     <form action="{% url 'private-form-intake-assessment' %}" method="post">
         {% csrf_token %}
         {{ formset.management_form }}
+        {% for form, participant in formset_and_participants %}
+            {{ form.participant_id_index }}
+            <br />
+        {% endfor %}
         <div id="general_information">
             <h2>General Information</h2>
             <div id="participant_name">
