[Re #48] WIP: Implementing date on participant selection page for Rider Intake Assessment. TODO: Pass the date to the actual assessment form.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -52,10 +52,11 @@
         {{ formset.management_form }}
         {% for form, participant in formset_and_participants %}
             {{ form.participant_id_index }}
+            {{ form.errors.as_text }}
+            {{ form.non_form_errors.as_text }}
             <br />
         {% endfor %}
         <div id="general_information">
-            <h2>General Information</h2>
             <div id="participant_name">
                 <p><strong>Participant Name</strong></p>
                 <p>
