--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_participants.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_participants.html
@@ -7,9 +7,14 @@
     </p>
     <form action="{% url 'private-form-intake-assessment' %}" method="post">
         {% csrf_token %}
-        {% for field in form %}
-            {{ field }} {{ field.errors.as_text }}<br />
-        {% endfor %}
+        <p>
+            {{ form.participants_selected }}
+            {{ form.participants_selected.errors.as_text }}
+        </p>
+        <p>
+            Date: {{ form.date }}
+            {{ form.date.errors.as_text }}
+        </p>
         <input type="submit" value="Continue" />
     </form>
 {% endblock %}
