[Re #93] Added text fields in classes.html

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/classes.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/classes.html
@@ -9,6 +9,24 @@
     </strong></p>
     {% endif %}
     <form action="{% url 'private-form-classes' %}" method="post">
-        
+        {% csrf_token %}
+        <p>
+            Fields with an <span style="color: red">*</span> next to them are
+             required.
+        </p>
+
+        <p>
+            <span style="color: red">*</span>Class Name: {{ form.name }}
+            <span class="error_text">
+                {{ form.name.errors.as_text }}
+            </span>
+        </p>
+
+        <p>
+            <span style="color: red">*</span>Class Description: {{ form.description }}
+            <span class="error_text">
+                {{ form.description.errors.as_text }}
+            </span>
+        </p>
     </form>
 {% endblock %}
