[Re #93] Added link to classes.html to admin index page.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -9,6 +9,11 @@
             </a>
         </li>
         <li>
+            <a href="{% url 'private-form-classes' %}">
+                Define a Class
+            </a>
+        </li>
+        <li>
             <a href="{% url 'report-select-participant' %}">
                 Participant Records
             </a>
