[Re #93] Added line break for description text field.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/classes.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/classes.html
@@ -22,7 +22,7 @@
             </span>
         </p>
         <p>
-            <span style="color: red">*</span>Class Description: {{ form.description }}
+            <span style="color: red">*</span>Class Description:<br /> {{ form.description }}
             <span class="error_text">
                 {{ form.description.errors.as_text }}
             </span>
