[Re #93] Renamed classes.html to define_a_class.html. Changed all the url shit to private-form-define-class.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -9,7 +9,7 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'private-form-classes' %}">
+            <a href="{% url 'private-form-define-a-class' %}">
                 Define a Class
             </a>
         </li>
