--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -14,6 +14,11 @@
             </a>
         </li>
         <li>
+            <a href="{% url 'report-select-class' %}">
+                Class Records
+            </a>
+        </li>
+        <li>
             <a href="{% url 'report-select-participant' %}">
                 Participant Records
             </a>
