[Re #93] Cleaned up class_select.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class_select.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class_select.html
@@ -9,11 +9,11 @@
     </p>
 
     <ul>
-        {% for class in classes %}
+        {% for group in grouping %}
             <li>
-                <a href="{% url 'class-record' class.class_id %}">
-                    {{ class.name }}
-                </a>
+
+                    {{ group.name }}
+                
             </li>
         {% endfor %}
     </ul>
