[Re #93] Cleaned up class.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class.html
@@ -27,3 +27,9 @@
             {{ error_text }}
         </strong></p>
     {% endif %}
+    {% if group %}
+        <p>
+            {{ group.description }}
+        </p>
+    {% endif %}
+{% endblock %}
