[Re #93] Cleaned up class_select.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class_select.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/class_select.html
@@ -11,9 +11,9 @@
     <ul>
         {% for group in grouping %}
             <li>
-
+                <a href="{% url 'class-record' group.class_id %}">
                     {{ group.name }}
-                
+                </a>
             </li>
         {% endfor %}
     </ul>
