[Re #76] Added url to Create User page to admin.html

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -15,4 +15,9 @@
         </li>
     </ul>
     <h2>User Accounts</h2>
+        <li>
+            <a href="{% url 'private-form-create-user' %}">
+                Create New User
+            </a>
+        </li>
 {% endblock %}
